feat: created a simple clone of the lombok lib